Fixed Icons not showing on Ipad

--- a/src/app/flightstrip-container/flightstrip/flightstrip-button/flightstrip-button.component.scss
+++ b/src/app/flightstrip-container/flightstrip/flightstrip-button/flightstrip-button.component.scss
@@ -18,7 +18,7 @@
 
 .icon {
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
   height: 70%;
   width: 70%;
   aspect-ratio: 1;
