--- a/src/app/flightstrip-container/flightstrip/flightstrip.component.scss
+++ b/src/app/flightstrip-container/flightstrip/flightstrip.component.scss
@@ -84,11 +84,11 @@ input {
   width: 20%;
   aspect-ratio: 1;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
 }
 
 .button{
-  width: 25%;
+  width: 100%;
   aspect-ratio: 1;
 }
 
